# tool-sandbox-policy

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  policy.py
tests/: test_cli.py  test_main.py  test_policy.py
